# neural-style-transfer-jetson

./: .gitignore  Dockerfile  cli.py  pyproject.toml
nst_jetson/: __init__.py  model.py  optimization.py  utils.py
scripts/: apply_style_transfer.sh  colab_accelerated.sh  colab_run.sh  container.sh  convert_to_onnx.sh  jupytercolab_install.sh
