[tool.poetry]
name = "neural_style_transfer"
version = "0.1.0"
description = "A tutorial to user style transfer in the Jetson family"
authors = ["Davidnet <germancho27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.0"
typer = "^0.3.2"
tqdm = "^4.55.1"
tf2onnx = "^1.7.2"

[tool.poetry.dev-dependencies]
notebook = "^6.1.6"
black = "^20.8b1"
debugpy = "^1.2.1"
ipython = "^7.19.0"
matplotlib = "^3.3.3"
jupyter-http-over-ws = "^0.0.8"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
